hphp/hack/test/decl/unnamed_variadic_method_parameter.php
<?hh // strict

class C {
  public function f(int $foo, ...): void {
    throw new Exception();
  }
}
